--- a/Eportfolio/style.css
+++ b/Eportfolio/style.css
@@ -527,9 +527,10 @@ animation: spinner 750ms infinite linear;
   .project__wrapper {
     position: relative;
     border-radius: 20px;
-    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
     overflow: hidden;
     margin-bottom: 150px;
+    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
+
   }
   
   .project__wrapper:hover .project__description {
@@ -538,16 +539,30 @@ animation: spinner 750ms infinite linear;
   }
   
   .project__wrapper:hover .project__img {
-    transform: scale(1.12);
+    transform: scale(1.07);
     filter: blur(5px);
+    -webkit-animation: zoomin 90s 1;
   }
+
+  
+
+
+@-webkit-keyframes zoomin {
+    0% {
+        -webkit-transform: scale(1.07);
+    }
+    100% {
+        -webkit-transform: scale(2);
+    }
+
+}
   
   .project__description {
     position: absolute;
     top: 50%;
     left: 90px;
     transform: translateY(100%);
-    color: white;
+    color: #f0ead6;
     opacity: 0;
     max-width: 550px;
     transition: opacity 300ms, transform 450ms ease;
